Fri May 29 07:30:20 GMT 2015  Olly Betts <olly@survex.com>

	* xapian-headers.i: Ignore new internal sortable_serialise_()
	  function.

Fri May 29 07:25:17 GMT 2015  Olly Betts <olly@survex.com>

	* xapian-headers.i: Ignore internal methods of Xapian::Weight.

Wed May 27 03:07:15 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Tue May 26 23:17:09 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Credit people for the #616-related improvements in 1.3.2.

Mon May 25 10:03:24 GMT 2015  Olly Betts <olly@survex.com>

	* python/Makefile.am,python3/Makefile.am: SWIG now automatically
	  makes xapian.Error a subclass of the Python Exception class, so
	  drop our post-processing tweak to add this in.

Mon May 25 09:58:30 GMT 2015  Olly Betts <olly@survex.com>

	* python/Makefile.am,python3/Makefile.am: Eliminate 'modern'
	  subdirectory - we haven't generated a non-modern variant of the
	  python bindings for ages.

Mon May 25 05:59:49 GMT 2015  Olly Betts <olly@survex.com>

	* python/Makefile.am,python3/Makefile.am: Fix Makefile comment typo.

Sun May 24 13:07:47 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Fix configure test for whether $CLI can run CSharp
	  programs - previously it would always fail, which would mean that
	  the CSharp tests wouldn't be run if CSharp programs can't be run
	  directly.

Fri May 22 06:13:49 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Fri May 22 04:48:35 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS.SKELETON: Add "Python3" section.

Thu May 21 04:37:31 GMT 2015  Olly Betts <olly@survex.com>

	* README,configure.ac: Require Tcl 8.5 as older versions are no longer
	  supported upstream, and this version added ::tcl::pkgconfig, which
	  makes the configure tests simpler and more reliable.

Tue May 19 05:45:48 GMT 2015  Olly Betts <olly@survex.com>

	* perl/t/symbol-test.t: If the symboltest module build fails, skip the
	  test - it's likely due to external reasons, like incompatible